[gd_scene load_steps=3 format=2]

[ext_resource path="res://Control.gd" type="Script" id=1]
[ext_resource path="res://BRPG_Assault_Rhythm_Loop.wav" type="AudioStream" id=2]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.129412, 0.129412, 0.129412, 1 )

[node name="Master_Slider" type="HSlider" parent="."]
margin_left = 362.0
margin_top = 151.0
margin_right = 841.0
margin_bottom = 167.0
min_value = -80.0
max_value = 20.0

[node name="SFX_Slider" type="HSlider" parent="."]
margin_left = 362.0
margin_top = 227.0
margin_right = 841.0
margin_bottom = 243.0
min_value = -80.0
max_value = 20.0
__meta__ = {
"_editor_description_": ""
}

[node name="Music_Slider" type="HSlider" parent="."]
margin_left = 362.0
margin_top = 310.0
margin_right = 841.0
margin_bottom = 326.0
min_value = -80.0
max_value = 20.0
__meta__ = {
"_editor_description_": ""
}

[node name="Label" type="Label" parent="."]
margin_left = 235.0
margin_top = 148.0
margin_right = 279.0
margin_bottom = 162.0
text = "Master"

[node name="Label2" type="Label" parent="."]
margin_left = 235.0
margin_top = 231.0
margin_right = 279.0
margin_bottom = 245.0
text = "SFX"

[node name="Label3" type="Label" parent="."]
margin_left = 235.0
margin_top = 314.0
margin_right = 279.0
margin_bottom = 328.0
text = "Music"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
autoplay = true
bus = "Music"

[connection signal="value_changed" from="Master_Slider" to="." method="_on_Master_Slider_value_changed"]
[connection signal="value_changed" from="SFX_Slider" to="." method="_on_SFX_Slider_value_changed"]
[connection signal="value_changed" from="Music_Slider" to="." method="_on_Music_Slider_value_changed"]
